--- a/index.html
+++ b/index.html
@@ -19,4 +19,6 @@ some of the words
 <hr>
 <a href="index.html" target="_new tab"download="index.html">This is you can download my this file</a>
 </body>
+  <script scr="main.js">
+    </script>
 </html>
